--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-reanimated": "^1.6.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-scalable-image": "^1.0.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-swipe-gestures": "^1.0.4",
+    "react-native-tab-view": "^2.11.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
-    "react-redux": "^7.1.3"
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
