--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-invertible-scroll-view": "^2.0.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "^1.6.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-scalable-image": "^1.0.0",
