--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^5.3.2",
+    "buffer": "^5.4.3",
+    "mqtt": "^3.0.0",
+    "process": "^0.11.10",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-invertible-scroll-view": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-paho-mqtt": "^0.1.1",
     "react-native-reanimated": "^1.6.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-scalable-image": "^1.0.0",
@@ -27,8 +31,11 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
     "react-redux": "^7.1.3",
+    "react_native_mqtt": "^1.3.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "url": "^0.11.0",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
