--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^0.6.2",
     "react-native-scalable-image": "^1.0.0",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-sound": "^0.11.0",
     "react-native-swipe-gestures": "^1.0.4",
     "react-native-tab-view": "^2.11.0",
     "react-navigation": "^4.0.10",
