--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^5.3.2",
+    "axios": "^0.19.2",
     "buffer": "^5.4.3",
     "mqtt": "^3.0.0",
     "process": "^0.11.10",
