--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "process": "^0.11.10",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-action-view": "^1.3.0",
     "react-native-animated-ellipsis": "^2.0.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-invertible-scroll-view": "^2.0.0",
