--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-action-view": "^1.3.0",
     "react-native-animated-ellipsis": "^2.0.0",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-image-view": "^2.1.9",
+    "react-native-image-zoom-viewer": "^2.2.27",
     "react-native-invertible-scroll-view": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paho-mqtt": "^0.1.1",
