--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "^1.1.2",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^5.3.2",
@@ -21,18 +22,29 @@
     "react-native": "0.61.5",
     "react-native-action-view": "^1.3.0",
     "react-native-animated-ellipsis": "^2.0.0",
+    "react-native-background-downloader": "^2.3.4",
+    "react-native-circular-progress": "^1.3.6",
+    "react-native-document-picker": "^3.2.4",
+    "react-native-file-viewer": "^2.0.1",
+    "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-google-drive-api-wrapper": "^1.2.0",
+    "react-native-image-picker": "^2.2.1",
     "react-native-image-view": "^2.1.9",
     "react-native-image-zoom-viewer": "^2.2.27",
     "react-native-invertible-scroll-view": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-modalbox": "^2.0.0",
     "react-native-paho-mqtt": "^0.1.1",
+    "react-native-progress": "^4.0.3",
     "react-native-reanimated": "^1.6.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-scalable-image": "^1.0.0",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-sound": "^0.11.0",
+    "react-native-svg": "^11.0.1",
     "react-native-swipe-gestures": "^1.0.4",
+    "react-native-swipe-up-down": "^1.0.7",
     "react-native-tab-view": "^2.11.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
